# Altair-Vega

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  README.md
.github/workflows/: ci.yml  release.yml
scripts/: startup.ps1  startup.sh
src/: bootstrap.rs  browser_peer.rs  code.rs  files.rs  lib.rs  main.rs  pairing.rs  runtime.rs  sync.rs  sync_docs.rs
web/: rendezvous-protocol.ts
web/browser-wasm/: Cargo.toml
web/browser-wasm/src/: lib.rs
web/frontend/: .gitignore  dev-rendezvous.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/frontend/public/: manifest.webmanifest  sw.js
web/frontend/scripts/: dev.mjs
web/frontend/src/: App.css  App.tsx  index.tsx  main.ts
web/frontend/src/components/: ChatBubble.css  ChatBubble.tsx  ChatThread.css  ChatThread.tsx  CodeInput.css  CodeInput.tsx  ComposeBar.css  ComposeBar.tsx  ConnectionStatus.css  ConnectionStatus.tsx  EmptyState.css  EmptyState.tsx  FileCard.css  FileCard.tsx  Header.css  Header.tsx  ImageViewer.css  ImageViewer.tsx  PeerAvatar.css  PeerAvatar.tsx  PeerBanner.css  PeerBanner.tsx  SidebarFiles.css  SidebarFiles.tsx  SidebarSettings.css  SidebarSettings.tsx  Toast.css  Toast.tsx
web/frontend/src/lib/: format.ts  identity.ts  message-format.ts  pwa.ts  rendezvous.ts  resume.ts  short-code.ts  state.ts  storage.ts  types.ts  wasm.ts
web/frontend/src/styles/: components.css  global.css  reset.css  tokens.css
web/rendezvous-worker/: package-lock.json  package.json  worker-configuration.d.ts
web/rendezvous-worker/src/: index.ts
